@@ -1,6 +1,7 @@
 package edu.neu.cs6510.sp25.t1.common.api.response;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -12,7 +13,10 @@ import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Unit tests for {@link StageReportResponse}.
@@ -52,7 +56,7 @@ class StageReportResponseTest {
             Arguments.of("", Collections.emptyList()),
             Arguments.of("test-stage", null),
             Arguments.of(null, new ArrayList<>()),
-            Arguments.of("deploy-stage", Arrays.asList(
+            Arguments.of("deploy-stage", List.of(
                     new StageReportResponse.ExecutionRecord("exec-3", "SUCCESS")
             ))
     );
